--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,8 @@
-
+sudo: false
+language: python
+notifications:
+  email: false
+python:
+- '3.4'
+install: pip install tox-travis
+script: tox -e pytest
