--- a/tox.ini
+++ b/tox.ini
@@ -1,1 +1,11 @@
+[tox]
+envlist = pytest 
 
+[testenv]
+basepython = python3
+
+[testenv:pytest]
+deps =
+  -rrequirements_dev.txt
+commands =
+  pytest
